errors getlist
